# BuildYourOwnX

./: .gitignore  CMakeLists.txt
AesTest/: CMakeLists.txt  README.md
AesTest/src/: AesEncryptor.cpp  AesEncryptor.h  main.cpp
OpenGL-for-Beginners/: CMakeLists.txt
OpenGL-for-Beginners/dependencies/lib/: glfw3dll.exp
OpenGL-for-Beginners/src/: Config.h
OpenGL-for-Beginners/week_01_hello_window/: CMakeLists.txt
OpenGL-for-Beginners/week_01_hello_window/src/: Config.h  main.cpp
OpenGL-for-Beginners/week_02_what_are_shaders/shaders/: vertex.vert
OpenGL-for-Beginners/week_02_what_are_shaders/src/: main.cpp
OpenGL-for-Beginners/week_03_getting_data_to_the_GPU/1_screen_coordinates/src/: main.cpp  triangle_mesh.cpp
OpenGL-for-Beginners/week_03_getting_data_to_the_GPU/2_multiple_buffers/shaders/: fragment.frag  vertex.vert
OpenGL-for-Beginners/week_03_getting_data_to_the_GPU/2_multiple_buffers/src/: Config.h  triangle_mesh.cpp  triangle_mesh.h
OpenGL-for-Beginners/week_03_getting_data_to_the_GPU/3_element_drawing/: CMakeLists.txt
OpenGL-for-Beginners/week_03_getting_data_to_the_GPU/3_element_drawing/shaders/: vertex.vert
OpenGL-for-Beginners/week_03_getting_data_to_the_GPU/3_element_drawing/src/: triangle_mesh.cpp
OpenGL-for-Beginners/week_04_textures/1_drawing_the_texture/: CMakeLists.txt
OpenGL-for-Beginners/week_04_textures/1_drawing_the_texture/shaders/: fragment.frag  vertex.vert
OpenGL-for-Beginners/week_04_textures/1_drawing_the_texture/src/: material.h
OpenGL-for-Beginners/week_04_textures/2_texture_units/: CMakeLists.txt
OpenGL-for-Beginners/week_04_textures/2_texture_units/shaders/: vertex.vert
OpenGL-for-Beginners/week_04_textures/2_texture_units/src/: Config.cpp  main.cpp  material.cpp  triangle_mesh.h
database/Redis/: CMakeLists.txt
database/Redis/src/: common.h  server.cpp
database/SimpleDatabase/: CMakeLists.txt
database/SimpleDatabase/src/: BTree.cpp  BTree.hpp  Common.hpp  Cursor.cpp  Cursor.hpp  Database.cpp  Database.hpp  InputBuffer.cpp  InputBuffer.hpp  InternalNode.cpp  InternalNode.hpp  InternalNodeHeader.hpp  LeafNode.cpp  LeafNode.hpp  LeafNodeHeader.hpp  MetaCommand.cpp  MetaCommand.hpp  Node.hpp  NodeHeader.hpp  Pager.cpp  Pager.hpp  Row.cpp  Row.hpp  Statement.cpp  Statement.hpp  Table.cpp  Table.hpp  main.cpp
database/SimpleDatabase/test/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  test.cpp
emulator/LinuxCntr500/: CMakeLists.txt
game/Cavestory/: CMakeLists.txt
game/Cavestory/include/: AnimatedSprite.hpp  Game.hpp  Globls.hpp  Graphics.hpp  Input.hpp  Sprite.hpp
game/Cavestory/src/: AnimatedSprite.cpp  Game.cpp  Graphics.cpp  Input.cpp  Sprite.cpp  main.cpp
grokking_algorithms/: CMakeLists.txt
grokking_algorithms/01_introduction_to_algorithms/: CMakeLists.txt
grokking_algorithms/01_introduction_to_algorithms/src/: 01_binary_search.cpp
grokking_algorithms/02_selection_sort/: CMakeLists.txt
grokking_algorithms/02_selection_sort/src/: main.cpp
grokking_algorithms/03_recursion/: CMakeLists.txt
grokking_algorithms/03_recursion/src/: 01_countdown.cpp  02_greet.cpp  03_factorial.cpp
grokking_algorithms/04_quicksort/: CMakeLists.txt
grokking_algorithms/04_quicksort/src/: 01_loop_sum.cpp  02_recursive_sum.cpp  03_recursive_count.cpp  04_recursive_max.cpp  05_quicksort.cpp
grokking_algorithms/05_hash_tables/: CMakeLists.txt
grokking_algorithms/05_hash_tables/src/: 01_price_of_groceries.cpp  02_check_voter.cpp
grokking_algorithms/06_breadth-first_search/: CMakeLists.txt
grokking_algorithms/06_breadth-first_search/src/: 01_breadth-first_search.cpp
grokking_algorithms/07_trees/: CMakeLists.txt
grokking_algorithms/07_trees/src/: 01_filesystem_dfs.cpp
grokking_algorithms/09_dijkstras_algorithm/: CMakeLists.txt
grokking_algorithms/09_dijkstras_algorithm/src/: 01_dijkstras_algorithm.cpp
grokking_algorithms/10_greedy_algorithms/: CMakeLists.txt
grokking_algorithms/10_greedy_algorithms/src/: 01_set_covering.cpp
grokking_algorithms/11_dynamic_programming/: CMakeLists.txt
grokking_algorithms/11_dynamic_programming/src/: 01_longest_common_subsequence.cpp
mark-sweep/: CMakeLists.txt  mian.cpp
