cmake_minimum_required(VERSION 3.15)
project(grokking_algorithms)

# 新增一些简单的算法实例，记录我查看的这本算法书！
#https://github.com/egonSchiele/grokking_algorithms

add_subdirectory(01_introduction_to_algorithms)
add_subdirectory(02_selection_sort)
add_subdirectory(03_recursion)
add_subdirectory(04_quicksort)
add_subdirectory(05_hash_tables)
add_subdirectory(06_breadth-first_search)
add_subdirectory(07_trees)
add_subdirectory(09_dijkstras_algorithm)
add_subdirectory(10_greedy_algorithms)
add_subdirectory(11_dynamic_programming)