cmake_minimum_required(VERSION 3.10)
project(04_quicksort)

#set(CMAKE_CXX_STANDARD 17)

#add_executable(${PROJECT_NAME} src/01_loop_sum.cpp)
#add_executable(${PROJECT_NAME} src/02_recursive_sum.cpp)
#add_executable(${PROJECT_NAME} src/03_recursive_count.cpp)
#add_executable(${PROJECT_NAME} src/04_recursive_max.cpp)
add_executable(${PROJECT_NAME} src/05_quicksort.cpp)


